// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`property Boolean 1`] = `
<div
  className="col-lg-12"
>
  <div
    className="form-group property required"
  >
    <label
      className="form-control-label"
      htmlFor="testNameField"
    >
      Boolean
    </label>
    <div
      className="controls"
    >
      <input
        className="form-control"
        disabled={undefined}
        id="testNameField"
        onChange={[Function]}
        placeholder={undefined}
        type="text"
        value="true"
      />
    </div>
  </div>
</div>
`;

exports[`simple property 1`] = `
<div
  className="col-lg-12"
>
  <div
    className="form-group property required"
  >
    <label
      className="form-control-label"
      htmlFor="testNameField"
    >
      Simple property
    </label>
    <div
      className="controls"
    >
      <input
        className="form-control"
        disabled={undefined}
        id="testNameField"
        onChange={[Function]}
        placeholder={undefined}
        type="text"
        value="testValue"
      />
    </div>
  </div>
</div>
`;
